@@ -1,3 +1,7 @@
+2005-05-31  Alex Roitman  <shura@gramps-project.org>
+	* src/AutoComp.py (StandardCustomSelector): Add class to handle
+	(int,str) selections including custom strings.
+
 2005-05-30  Alex Roitman  <shura@gramps-project.org>
 	* src/RelLib.py: Move constants back to RelLib, as class attributes.
 	* src/Utils.py: Move constant mappings from const.py.in.
